--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
         <input type="text" id="messageInput" placeholder="Type your message..." /> <!-- Input field -->
         <button id="addItemButton">Submit</button> <!-- Button to submit message -->
     </div>
+    <div id="messagesList" class="messages-list"></div> <!-- Section to display messages -->
+
     <script src="client.js"></script> <!-- Frontend JavaScript - Handles sending the message to the server -->
 </body>
 </html>
